# UHDM

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Config.cmake.in  INSTALL.md  Makefile  README.md  model_gen.tcl  shell.nix  uhdm.yaml  verify_poc.py
.github/kokoro/: continuous-test.cfg  continuous.cfg  ctest2junit.xsl  kokoro-config.py  presubmit-test.cfg  presubmit.cfg  test.sh
.github/kokoro/steps/: hostinfo.sh  hostsetup.sh
.github/mingw-w64-UHDM/: PKGBUILD
.github/workflows/: main.yml  msys2.yml
cmake/configs/: UHDM.pc.in  UHDMConfig.cmake.in
headers/: actual_group.h  alias_stmt.h  array_net.h  array_var.h  assertion.h  begin.h  bit_var.h  byte_var.h  chandle_var.h  class_defn.h  class_obj.h  class_typespec.h  class_var.h  clocking_block.h  concurrent_assertion.h  cont_assign.h  containers.h  def_param.h  design.h  distribution.h  enum_net.h  enum_struct_packed_net_group.h  enum_struct_union_packed_var_group.h  enum_var.h  expr.h  expr_dist.h  expr_ref_obj_group.h  for_stmt.h  foreach_stmt.h  fork.h  fork_stmt.h  forks.h  function.h  gate_array.h  gen_scope.h  instance.h  instance_array.h  instance_item.h  int_var.h  integer_net.h  (+74 more)
include/: config.h.in  sv_vpi_user.h  uhdm-version.h.in  vpi_uhdm.h  vpi_user.h
include/uhdm/: BaseClass.h  ElaboratorListener.h  ExprEval.h  SynthSubset.h  Utils.h  clone_tree.h  sv_vpi_user.h
install/: UHDM.pc.in
model/: actual_group.yaml  alias_stmt.yaml  always.yaml  any_pattern.yaml  array_expr.yaml  array_net.yaml  array_typespec.yaml  array_var.yaml  assert.yaml  assert_stmt.yaml  assertion  assertion.yaml  assign_stmt.yaml  assignment.yaml  assume.yaml  atomic_stmt.yaml  attribute.yaml  begin.yaml  bit_select.yaml  bit_typespec.yaml  bit_var.yaml  blank_model.yaml  break_stmt.yaml  byte_typespec.yaml  byte_var.yaml  case_item.yaml  case_property.yaml  case_property_item.yaml  case_stmt.yaml  chandle_typespec.yaml  chandle_var.yaml  checker_decl.yaml  checker_inst.yaml  checker_inst_port.yaml  checker_port.yaml  class_defn.yaml  class_obj.yaml  class_typespec.yaml  class_var.yaml  clocked_property.yaml  (+259 more)
model_gen/: file_utils.tcl  generate_elaborator.tcl  model_gen.tcl  parse_model.tcl  pdict.tcl  vpi_map.txt  vpi_reverse_map.tcl
python/: BaseClass.i  CMakeLists.txt  UHDM.i  setup.py  setup.py.in  swig_main.cpp  swig_main.h  swig_test.cpp  swig_test.h
python/poc_pybind11/: CMakeLists.txt  uhdm_py.cpp
python/pybind11/: CMakeLists.txt  README.md  module.cpp  uhdm_db.cpp  uhdm_db.hpp  verify_milestone1.py
python/pybind11/bindings/: bind_db.cpp
python/pybind11/utils/: exceptions.hpp
python/tests/: test_module.py
python/uhdm/: util.py  util.py.in
scripts/: Cloner.py  Elaborator.py  ElaboratorListener_cpp.py  ElaboratorListener_h.py  UhdmListener.py  VpiListener.py  VpiListenerTracer_h.py  VpiListener_h.py  capnp.py  class_hierarchy.py  classes.py  classes_h.py  clone_tree_cpp.py  config.py  containers_h.py  file_utils.py  generate.py  loader.py  multimap.py  scripts.pyproj  serializer.py  swig_uhdm_i.py  uhdm_forward_decl_h.py  uhdm_h.py  uhdm_types_h.py  vpi_listener.py  vpi_user_cpp.py  vpi_visitor.py  vpi_visitor_cpp.py
src/: BaseClass.cpp  ExprEval.cpp  Serializer.cpp  Serializer_restore.cpp  Serializer_save.cpp  SymbolFactory.cpp  SynthSubset.cpp  UHDM.capnp  UHDM.capnp.c++  UHDM.capnp.h  UhdmAdjuster.cpp  UhdmLint.cpp  Utils.cpp  actual_group.cpp  clone_tree.cpp  enum_struct_packed_net_group.cpp  enum_struct_union_packed_var_group.cpp  expr_ref_obj_group.cpp  instance_item.cpp  main.cpp  ref_obj_interf_net_var_group.cpp  vpi_user.cpp
templates/: BaseClass.cpp  BaseClass.h  Cloner.cpp  Cloner.h  Elaborator.cpp  Elaborator.h  ElaboratorListener.cpp  ElaboratorListener.h  ExprEval.cpp  ExprEval.cpp.save  ExprEval.h  NumUtils.cpp  NumUtils.h  RTTI.h  Serializer.cpp  Serializer.h  Serializer_restore.cpp  Serializer_save.cpp  SymbolFactory.cpp  SymbolFactory.h  SymbolId.cpp  SymbolId.h  SynthSubset.cpp  SynthSubset.h  UHDM.capnp  UhdmAdjuster.cpp  UhdmAdjuster.h  UhdmComparer.cpp  UhdmComparer.h  UhdmLint.cpp  UhdmLint.h  UhdmListener.cpp  UhdmListener.h  UhdmVisitor.cpp  UhdmVisitor.h  VpiListener.cpp  VpiListener.h  VpiListenerTracer.h  class_header.h  class_header.i  (+18 more)
tests/: classes_test.cpp  cloner_test.cpp  dump.cpp  error-handler_test.cpp  expr_prettyPrint_test.cpp  expr_reduce_test.cpp  full_elab.cpp  full_elab_test.cpp  garbage_collect_test.cpp  group_membership_test.cpp  listener_elab.cpp  listener_elab_test.cpp  module-port_test.cpp  process_test.cpp  statement_test.cpp  symbol_factory_test.cpp  test-dump.cpp  test-util.h  test1.cpp  test2.cpp  test3.cpp  test4.cpp  testErrorHandler.cpp  test_classes.cpp  test_garbage_collect.cpp  test_helper.h  test_listener.cpp  test_process.cpp  test_tf_call.cpp  test_util.h  tf_call_test.cpp  uhdm_listener_test.cpp  visitor_elab.cpp  vpi_get_test.cpp  vpi_listener_test.cpp  vpi_value_conversion_test.cpp
util/: uhdm-cmp.cpp  uhdm-cmp.py  uhdm-dump.cpp  uhdm-dump.py  uhdm-gc.cpp  uhdm-hier.cpp  uhdm-hier.py  uhdm-lint.cpp
